traefik/dashboard-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-auth-middleware
  namespace: default
spec:
  basicAuth:
    secret: traefik-auth-secret
